// Copyright 2025 JC-Lab
// SPDX-License-Identifier: AGPL-3.0-or-later OR LicenseRef-FEL

syntax = "proto3";
package flymesh.relay;

option go_package = "github.com/flymesh/core/pkg/pb/relay-server;relaypb";

message HandshakeRequest {
  uint64 stream_id = 1;
  bytes  sender_peer_id = 2;
}

message HandshakeAck {
  bool ok = 1;
  string error = 2;
}
